--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,6 @@ h5 {
     margin-bottom: 0;
 }
 
-input[type=file] {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: 300px;
-}
-
 a:active {
     outline: none;
     box-shadow: none;
@@ -318,4 +311,30 @@ select {
     margin-bottom: 4px;
     font-size: 14px;
     font-weight: 500;
+}
+
+.textonimg {
+    position: relative;
+    color: white;
+    overflow: hidden;
+    text-align: center;
+}
+
+
+/* Bottom left text */
+
+.bottom-left {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 15px;
+    height: 30%;
+    text-align: center;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0), #000);
+}
+
+.bottom-left p {
+    position: absolute;
+    bottom: 10px;
 }
