--- a/src/index.css
+++ b/src/index.css
@@ -112,7 +112,7 @@ a {
     top: 0;
     left: 0;
     background: rgba(0, 0, 0, 0.5);
-    z-index: 99999999999999999999;
+    z-index: 999;
     display: flex;
     align-items: center;
     justify-content: center;
